Fixed build errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,14 +1,25 @@
-
+export(makeSumExp)
+export(makeDisMat)
+export(findMacMod)
+export(calAVA)
+export(calQval)
+export(calES)
+export(prioritize)
+export(decorateID)
 export(MACARRoN)
-
 import("SummarizedExperiment")
 import("BiocParallel")
-import("DelayedArray")
-import("WGCNA")
-import("ff")
-import("ffbase")
-import("data.table")
-import("dynamicTreeCut")
 import("Maaslin2")
-import("plyr")
-import("psych")
+import("logging")
+import("optparse")
+importFrom("DelayedArray","DelayedArray")
+importFrom("WGCNA", "bicor")
+importFrom("ff", "as.ff")
+importFrom("dynamicTreeCut", "cutreeDynamic")
+importFrom("plyr", "ddply")
+importFrom("stats", "p.adjust")
+importFrom("psych", "harmonic.mean")
+importFrom("data.table", "%like%")
+importFrom("RCurl", "url.exists", "getURL")
+importFrom("xml2", "read_xml", "xml_text", "xml_find_all")
+importFrom("RJSONIO", "fromJSON")
