namespace and errors fixed

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,24 +12,27 @@ Author: Amrisha Bhosle<abhosle@broadinstitute.org>,
     Ludwig Geistlinger<Ludwig_Geistlinger@hms.harvard.edu>, 
     Sagun Maharjan<sagunmaharjann@gmail.com>
 Maintainer: Sagun Maharjan <sagunmaharjann@gmail.com>
+Depends: 
+    R (>= 4.1.0), SummarizedExperiment (>= 1.10.0)
 Imports: 
     BiocParallel,
     DelayedArray,
     WGCNA,
     ff,
-    ffbase,
     data.table,
     dynamicTreeCut,
     Maaslin2,
     plyr,
-    psych
+    stats,
+    psych,
+    xml2,
+    RCurl,
+    RJSONIO
 Suggests: 
     knitr,
     testthat (>= 2.1.0),
     rmarkdown, 
     markdown
-Depends: 
-    R (>= 4.1.0), SummarizedExperiment (>= 1.10.0)
 Description: MACARRoN is a workflow for the prioritization of interesting bioactive small molecules from metabolomics experiments. Prioritization integrates strengths of evidences of bioactivity such as covariation with a standard/known metabolite, abundance relative to a known metabolite and association with an environmental or phenotypic indicator of bioactivity. Broadly, the workflow consists of stratified clustering of metabolic spectral features which co-vary in abundance in a condition, transfer of functional annotations, estimation of relative abundance and differential abundance analysis to identify associations between features and phenotype/condition.
 VignetteBuilder: knitr
 License: MIT + file LICENSE
@@ -37,3 +40,4 @@ URL: http://huttenhower.sph.harvard.edu/macarron
 Encoding: UTF-8
 biocViews: Sequencing, Metabolomics, Coverage, FunctionalPrediction, Clustering
 BugReports: https://forum.biobakery.org/c/microbial-community-profiling/macarron
+RoxygenNote: 7.1.2
