--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,13 +14,12 @@ import(DelayedArray)
 import(Maaslin2)
 import(SummarizedExperiment)
 import(WGCNA)
+import(data.table)
 import(ff)
 import(logging)
-import(optparse)
 importFrom(RCurl,getURL)
 importFrom(RCurl,url.exists)
 importFrom(RJSONIO,fromJSON)
-importFrom(data.table,"%like%")
 importFrom(dynamicTreeCut,cutreeDynamic)
 importFrom(plyr,ddply)
 importFrom(psych,harmonic.mean)
