--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,6 @@ export(makeDisMat)
 export(makeSumExp)
 export(prioritize)
 import(SummarizedExperiment)
+importFrom("methods", "as")
+importFrom("stats", "as.dist", "ecdf", "hclust", "quantile")
+importFrom("utils", "tail", "write.csv")
